--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,79 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Lorum Ipsum
+## Executive Summary
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce finibus erat ac bibendum posuere. Proin nec semper erat, id suscipit tortor. Nam posuere rhoncus sem. Sed ultricies lorem id quam efficitur, auctor interdum arcu molestie. Integer justo sapien, suscipit id sagittis quis, dapibus vitae ipsum. Mauris tincidunt iaculis ligula, id lobortis diam feugiat a. Nam arcu lectus, tempus nec nisi id, feugiat ultrices est. Ut facilisis aliquet aliquam. Suspendisse a ultricies mauris. Etiam auctor commodo arcu, ut pharetra arcu auctor at. Fusce id condimentum mauris, interdum mattis lacus. Sed elit mi, iaculis sit amet tortor nec, vestibulum auctor leo. Pellentesque eu erat vel eros dapibus posuere. Etiam id est efficitur, congue dui ut, euismod ex. Vestibulum elit purus, tempor at posuere in, mollis ut lacus. In quis justo lacus.
+In this project, my goal will be to use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants using devices such as Jawbone Up, Nike FuelBand, and Fitbit to quantify how well the subjects are exercising. I will be using data from here http://web.archive.org/web/20161224072740/http:/groupware.les.inf.puc-rio.br/har
+
+## Loading Data
+
+First I will load necessary R libraries that I will need to complete my analysis.
+
+```{r libraries, message=FALSE}
+library(dplyr)
+library(caret)
+library(lubridate)
+```
+
+Now I will download the data, load it into R and clean the data for analysis. I will import the testing set as "validation" as I will split the training data further for later validation.
+
+```{r import data}
+training_file_url <- "https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv"
+testing_file_url <- "https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv"
+download.file(training_file_url, "training_test.csv", method = "curl")
+download.file(testing_file_url, "validation.csv", method = "curl")
+training_test <- read.csv(file.path(getwd(), "training_test.csv"), row.names = 1, stringsAsFactors = FALSE)
+validation <- read.csv(file.path(getwd(), "validation.csv"), row.names = 1, stringsAsFactors = FALSE)
+```
+
+## Clean Data
+
+Now that we have the data loaded in, let's explore the data using a few different R commands such as str(testing), str(training) - I haven't included the output here as there are 159 columns as we can see here from the dim command.
+
+```{r explore data}
+dim(training_test)
+```
+
+Let's go ahead and clean up some of these variables.
+
+```{r clean data}
+
+## get columns with no data in validation set
+rows_with_data <- !as.vector(sapply(validation, function(x)all(is.na(x))))
+## drop columns without data in validation set
+training_test <- training_test[,rows_with_data]
+validation <- validation[,rows_with_data]
+## convert dates to date format
+training_test$cvtd_timestamp <- dmy_hm(training_test$cvtd_timestamp)
+validation$cvtd_timestamp <- dmy_hm(validation$cvtd_timestamp)
+## convert char col to factor
+training_test$new_window <- factor(training_test$new_window)
+validation$new_window <- factor(validation$new_window)
+training_test$new_window <- factor(training_test$new_window)
+validation$new_window <- factor(validation$new_window)
+training_test$classe <- factor(training_test$classe)
+training_test$user_name <- factor(training_test$user_name)
+validation$user_name <- factor(validation$user_name)
+## remove raw time stamp (drop columns)
+training_test <- training_test %>%
+  select(-c(2,3))
+validation <- validation %>%
+  select(-c(2,3))
+
+```
+
+Let's check for NAs now that we have cleaned up our data
+
+```{r check NAs}
+colSums(is.na(training_test))
+colSums(is.na(validation))
+```
+
+We can see that there are no more columns since we removed the columns that we do not have in the final test set.
+
+## Explore Data
+
+Now that we have a clean set of data, let's split up our data as follows:
+
+training_test (originally training data) will be split 70/30 into training and test data.
+validaiton (originally test data) will be left seperate and we will use part of the original training set as test data instead so that we will only need to use the validation set once at the end.
